--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #040d00;
+    background-image: url("https://transparenttextures.com/patterns/asfalt-light.png");
     min-height: 100vh;
     color: white;
     margin-left: 15px;
@@ -20,7 +21,7 @@ h1 {
 }
 
 img {
-    width: 170px;
+    width: 270px;
     border-radius: 20px;
     margin-top: 30px;
 }
